istio/2-apps.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: istions
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 1
  template:
    metadata:
     labels:
        app: blue
    spec:
      containers:
      - image: cloudmanly/eks:blue 
        imagePullPolicy: Always
        name: blue
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: istions
spec:
  selector:
    matchLabels:
      app: green
  replicas: 1
  template:
    metadata:
     labels:
        app: green
    spec:
      containers:
      - image: cloudmanly/eks:green 
        imagePullPolicy: Always
        name: green
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: istions
  labels:
    app: green
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: green

---

apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: istions
  labels:
    app: blue
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue
